--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clínica dental</title>
+
+    <script src="https://kit.fontawesome.com/15feb8d600.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
